Registration API with andularjs

--- a/FundooApp/Pages/register.css
+++ b/FundooApp/Pages/register.css
@@ -73,7 +73,7 @@ a{
     display:flex;
     justify-content:space-between;
     align-items:center;
-    /* margin-top:6rem; */
+    margin-top:5rem;
 }
 .nextButton{
     background-color:#0688de;
@@ -88,6 +88,7 @@ input{
 }
 #uname{
     position:relative;
+    
 }
 #uname label{
     position:absolute;
@@ -100,15 +101,15 @@ input{
 }
 .googleEmail{
     height:2rem;
-    
+    width:100%;
 }
 
 .names{
     display:flex;
     flex-direction:row;
     justify-content: space-between;
-    height:2rem;
-    margin-bottom: 0.3rem;
+    height:2.3rem;
+    margin-bottom: 1rem;
     
 }
 
@@ -116,8 +117,8 @@ input{
     display:flex;
     flex-direction:row;
     justify-content: space-between;
-    height:2rem;
-    margin-bottom: 0.3rem;
+    height:2.3rem;
+    margin-bottom: 1rem;
 }
 
 
